--- a/_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc
+++ b/_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc
@@ -1,5 +1,7 @@
 ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data. This means the maximum I/O request size can be up to 1MB. To issue I/O requests of size 1 MB for a Broadcom NVMe/FC host, you must increase the `lpfc` value of the `lpfc_sg_seg_cnt` parameter to 256 from the default value of 64.
 
+NOTE: The following steps don't apply to Qlogic NVMe/FC hosts.
+
 .Steps
 
 . Set the `lpfc_sg_seg_cnt` parameter to 256:
@@ -26,5 +28,3 @@ cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt
 256
 ----
 
-[NOTE] 
-This is not applicable to Qlogic NVMe/FC hosts.
