--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -189,32 +189,7 @@ The expected value is 1.
 
 === Enable 1MB I/O size (Optional)
 
-ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data. This means the maximum I/O request size can be up to 1MB. To issue I/O requests of size 1 MB for a Broadcom NVMe/FC host, you must increase the `lpfc` value of the `lpfc_sg_seg_cnt` parameter to 256 from the default value of 64.
-
-NOTE: The following steps don't apply to Qlogic NVMe/FC hosts.
-
-.Steps
-
-. Set the `lpfc_sg_seg_cnt` parameter to 256:
-+
-----
-cat /etc/modprobe.d/lpfc.conf
-----
-+
-.Example output
-----
-options lpfc lpfc_sg_seg_cnt=256
-----
-
-. Run a `dracut -f` command, and reboot the host:
-
-. Verify that `lpfc_sg_seg_cnt` is 256:
-+
-----
-cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt
-----
-+
-The expected value is 256.
+include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 === Verify NVMe services
 
