--- a/nvme_ubuntu_2404.adoc
+++ b/nvme_ubuntu_2404.adoc
@@ -152,10 +152,7 @@ For the current list of supported adapter driver and firmware versions, see the 
 cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 ----
 +
-.Expected output
-----
-3
-----
+The expected output is 3.
 
 . Verify that the initiator ports are up and running and that you can see the target LIFs:
 
@@ -169,7 +166,7 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 
 .. `cat /sys/class/fc_host/host*/port_state`
 +
-.Expected output
+.Example output
 ----
 Online
 Online
@@ -235,10 +232,7 @@ QLE2872 FW: v9.15.00 DVR: v10.02.09.100-k
 cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
 +
-.Expected output
-----
-1
-----
+The expected ouptut is 1.
 
 --
 =====
@@ -364,14 +358,16 @@ sectype: none
 nvme discover -t tcp -w <host-traddr> -a <traddr>
 ----
 +
-.Example output
-+
+.Show example output
+[%collapsible]
+====
 ----
 #nvme discover -t tcp -w 192.168.167.150 -a 192.168.167.155
 #nvme discover -t tcp -w 192.168.167.150 -a 192.168.167.156
 #nvme discover -t tcp -w 192.168.166.150 -a 192.168.166.155
 #nvme discover -t tcp -w 192.168.166.150 -a 192.168.166.156
 ----
+====
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
@@ -379,14 +375,16 @@ nvme discover -t tcp -w <host-traddr> -a <traddr>
 nvme connect-all -t tcp -w <host-traddr> -a <traddr>
 ----
 +
-.Example output
-+
+.Show example output
+[%collapsible]
+====
 ----
 #nvme connect-all -t tcp -w 192.168.167.150 -a 192.168.167.155
 #nvme connect-all -t tcp -w 192.168.167.150 -a 192.168.167.156
 #nvme connect-all -t tcp -w 192.168.166.150 -a 192.168.166.155
 #nvme connect-all -t tcp -w 192.168.166.150 -a 192.168.166.156
 ----
+====
 +
 NOTE: Beginning with Ubuntu 24.04, the ctrl_loss_tmo timeout default setting for NVMe/TCP is turned off. This means there is no limit on the number of retries (indefinite retry) and you don't need to manually configure a specific ctrl_loss_tmo timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
 
@@ -402,10 +400,7 @@ You can use the following procedure to validate NVME-oF.
 cat /sys/module/nvme_core/parameters/multipath
 ----
 +
-.Expected output
-----
-Y
-----
+The expected output is "Y".
 
 . Verify that the appropriate NVMe-oF settings (such as, model set to "NetApp ONTAP Controller" and load balancing iopolicy set to "round-robin") for the respective ONTAP namespaces correctly display on the host:
 
@@ -431,8 +426,9 @@ round-robin
 nvme list
 ----
 +
-.Example output
-+
+.Show example output
+[%collapsible]
+====
 ----
 Node         SN                         Model                          
 ---------------------------------------------------------  
@@ -443,18 +439,21 @@ Namespace Usage   Format                FW            Rev
 -----------------------------------------------------------
 1                 21.47 GB / 21.47 GB	4 KiB + 0 B   FFFFFFFF
 ----
+====
 
 . Verify that the controller state of each path is live and has the correct ANA status:
 +
 [role="tabbed-block"]
-====
+=====
 .NVMe/FC
 --
 ----
 nvme list-subsys /dev/nvme0n1
 ----
 
-.Example output
+.Show example output
+[%collapsible]
+====
 [subs=+quotes]
 ----
 nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.8763d311b2ac11ed950ed039ea951c46:subsystem. ubuntu_24.04 \
@@ -463,6 +462,7 @@ nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.8763d311b2ac11ed950ed039ea951c46:su
 +- nvme3 *fc* traddr=nn-0x20a6d039ea954d17:pn-0x20aad039ea954d17,host_traddr=nn-0x200000109b1b95f0:pn-0x100000109b1b95f0 *live non-optimized*
 +- nvme5 *fc* traddr=nn-0x20a6d039ea954d17:pn-0x20a9d039ea954d17,host_traddr=nn-0x200000109b1b95ef:pn-0x100000109b1b95ef *live non-optimized*
 ----
+====
 --
 
 .NVMe/TCP
@@ -471,7 +471,9 @@ nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.8763d311b2ac11ed950ed039ea951c46:su
 nvme list-subsys /dev/nvme1n1
 ----
 
-.Example output
+.Show example output
+[%collapsible]
+====
 [subs=+quotes]
 ----
 nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.9b7d42b764ff11efb8fed039eabac370:subsystem.ubuntu_24.04_tcp_211
@@ -482,30 +484,31 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.9b7d42b764ff11efb8fed039eabac370:su
  +- nvme1 *tcp* traddr=192.168.167.155,trsvcid=4420,host_traddr=192.168.167.150,src_addr=192.168.167.150 *live optimized*
  +- nvme2 *tcp* traddr=192.168.166.156,trsvcid=4420,host_traddr=192.168.166.150,src_addr=192.168.166.150 *live non-optimized*
  +- nvme3 *tcp* traddr=192.168.167.156,trsvcid=4420,host_traddr=192.168.167.150,src_addr=192.168.167.150 *live non-optimized*
-
 ----
-
---
 ====
+--
+=====
 
 
 . Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
 [role="tabbed-block"]
-====
+=====
 .Column
 --
 ----
 nvme netapp ontapdevices -o column
 ----
 
-.Example output
-
+.Show example output
+[%collapsible]
+====
 ----
 Device        Vserver        Namespace Path          NSID UUID                                   Size
 ------------- -------------  ----------------------- ---- -------------------------------------- ---------
 /dev/nvme0n1   vs_211_tcp    /vol/tcpvol1/ns1        1    1cc7bc78-8d7b-4d8e-a3c4-750f9461a6e9   21.47GB
 ----
+====
 --
 .JSON
 --
@@ -513,7 +516,9 @@ Device        Vserver        Namespace Path          NSID UUID                  
 nvme netapp ontapdevices -o json
 ----
 
-.Example output
+.Show example output
+[%collapsible]
+====
 ----
 {
 
@@ -532,8 +537,9 @@ nvme netapp ontapdevices -o json
 }
 
 ----
---
 ====
+--
+=====
 
 == Known issues
 
