--- a/nvme_ubuntu_2404.adoc
+++ b/nvme_ubuntu_2404.adoc
@@ -190,10 +190,12 @@ FCP CMPL: xb 00000047 Err 00000075
 ====
 --
 
-.Marvell/QLogic FC Adapter for NVMe/FC
+.Marvell/QLogic
 --
 
 The native inbox qla2xxx driver included in the Ubuntu 24.04 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support. 
+
+Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
