--- a/_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc
+++ b/_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc
@@ -7,7 +7,7 @@ NOTE: The following steps don't apply to Qlogic NVMe/FC hosts.
 . Set the `lpfc_sg_seg_cnt` parameter to 256:
 +
 ----
-# cat /etc/modprobe.d/lpfc.conf 
+cat /etc/modprobe.d/lpfc.conf 
 ----
 +
 ----
@@ -19,15 +19,10 @@ options lpfc lpfc_sg_seg_cnt=256
 . Verify that `lpfc_sg_seg_cnt` is 256:
 +
 ----
-# cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt 256
+cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt 
 ----
+The expected value is 256.
 +
-<<<<<<< HEAD
 [NOTE]
-This is not applicable to Qlogic NVMe/FC hosts.
 
 //ONTAPDOC-2561 25-Nov-2024
-=======
-The expected value is 256.
-
->>>>>>> 2da4c385b6dec32e911b07c5e1732a4379f776c1
